k8s/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-redis-sample
  namespace: go-redis-sample
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: go-redis-sample
