k8s/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-redis-sample-ingress
  namespace: go-redis-sample
spec:
  ingressClassName: nginx
  rules:
    - host: go-redis-sample.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-redis-sample
                port:
                  number: 3000
