k8s/resources/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: go-redis-sample-policy
  namespace: go-redis-sample
spec:
  podSelector:
    matchLabels:
      app: go-redis-sample
  policyTypes:
    # - Ingress
    - Egress
  # ingress:
  #   - from:
  #       - podSelector:
  #           matchLabels:
  #             app: go-redis-sample
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: redis
      ports:
        - protocol: TCP
          port: 6379
